# kgl_wheat

./: .gitignore  README.md  pyproject.toml
kgl_wheat/: config.py  dataset.py  evaluate.py  metric.py  train.py  utils.py
kgl_wheat/efficientdet/: anchors.py  efficientnet.py  initializers.py  layers.py  model.py  setup.py
kgl_wheat/efficientdet/utils/: __init__.py  compute_overlap.py
notebooks/: visualize_predictions.ipynb
src/: anchors.py  config.py  dataset.py  efficientnet.py  initializers.py  model.py  train.py
src/utils/: __init__.py
