[tool.poetry]
name = "kgl_wheat"
version = "0.1.0"
description = "A solution of Global Wheat Detection challenge."
authors = ["Alexander Konshin <sashulya.konshin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kaggle = "^1.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
