[tool.poetry]
name = "kgl_wheat"
version = "0.1.0"
description = "A solution of Global Wheat Detection challenge."
authors = ["Alexander Konshin <sashulya.konshin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kaggle = "^1.5.6"
tensorflow = "^2.2.0"
scikit-learn = "^0.23.1"
pandas = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
