[tool.poetry]
name = "kgl_wheat"
version = "0.1.0"
description = "A solution of Global Wheat Detection challenge."
authors = ["Alexander Konshin <sashulya.konshin@gmail.com>"]
license = "Apache License, Version 2.0 http://www.apache.org/licenses/LICENSE-2.0"
packages = [{ include = "kgl_wheat" }]

[tool.poetry.dependencies]
python = "^3.7"
kaggle = "^1.5.6"
tensorflow = "^2.2.0"
scikit-learn = "^0.23.1"
pandas = "^1.0.4"
opencv-python = "^4.2.0"
keras-applications = "^1.0.8"
tqdm = "^4.46.1"
joblib = "^0.16.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.2.2"
opencv-python = "^4.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
